# RustIDE

./: .gitignore  Cargo.toml  README.md  package.json  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
src-tauri/: Cargo.toml
src-tauri/src/: lib.rs
src-tauri/src/commands/: editor.rs  file_system.rs  mod.rs  project.rs  search.rs  settings.rs  syntax.rs
src-tauri/src/core/: cursor.rs  editor.rs  mod.rs  syntax.rs  text_buffer.rs  traits.rs  utils.rs
src-tauri/src/lsp/: client.rs  mod.rs  ownership.rs  rust_analyzer.rs
src-tauri/src/project/: build.rs  detection.rs  file_tree.rs  manifest.rs  mod.rs  templates.rs  workspace.rs
src-tauri/src/ui/: app_state.rs  mod.rs  panels.rs
src-tauri/src/utils/: async_utils.rs  config.rs  debounce.rs  file_watcher.rs  logging.rs  mod.rs  paths.rs  processes.rs
