[workspace]
members = ["src-tauri"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = {version = "1.0", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.dev]
incremental = true
debug = true 

[profile.release]
lto = true 
codegen-units = 1
panic = "abort"
strip = true