[package]
name = "RustIDE"
version = "0.1.0"
description = "A next-generation IDE for Rust development"
authors = ["RustIDE Team"]
license = "MIT or Apache-2.0"
repository = "https://github.com/ryan-tobin/rustide"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
tauri = "2.8.5"
serde = { workspace = true }
serde_json = "1.0"
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

ropey = "1.6"
tree-sitter = "0.25.8"
tree-sitter-rust = "0.24.0"

lsp-types = "0.97"
lsp-server = "0.7.9"
tower-lsp = "0.20"

cargo_metadata = "0.22.0"
toml = "0.9.5"

lru = "0.16.0"
parking_lot = "0.12"

notify = "8.2.0"
walkdir = "2.4"
syn = "2.0.106"

rusqlite = { version = "0.37.0", features = ["bundled"] }

uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
dev = ["tauri/devtools"]